--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@fontsource-variable/manrope": "^5.1.0",
+		"open-props": "^1.7.7"
 	}
 }
